AI_Project/ZyboCar/ZyboCar.sdk/.metadata/.plugins/org.eclipse.cdt.ui/ZyboMotorTest.build.log
20:28:12 **** Auto Build of configuration Debug for project ZyboMotorTest ****
make all 
Building file: ../src/main.c
Invoking: ARM gcc compiler
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../standalone_bsp_0_lol/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.d" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:21:2: error: expected ';' before '}' token
  }
  ^
make: *** [src/main.o] Fejl 1

20:28:12 Build Finished (took 522ms)

